--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-cayman
 title: Pocket Kangaroo 闲钱袋鼠项目开发文档
-description: The documents about Software Analysis & Design Team Work
+description: The documents about System Analysis & Design Team Work
